Fix textarea scrollbar-color and editor close button z-index

--- a/packages/frontend/src/app/components/new-editor/new-editor.component.scss
+++ b/packages/frontend/src/app/components/new-editor/new-editor.component.scss
@@ -53,6 +53,7 @@ app-media-preview {
   position: absolute;
   top: 16px;
   right: 16px;
+  z-index: 2;
 }
 
 .quote-container {
