--- a/packages/frontend/src/app/styles/basic-html.scss
+++ b/packages/frontend/src/app/styles/basic-html.scss
@@ -58,3 +58,7 @@ pre {
 details {
   cursor: pointer;
 }
+
+textarea {
+  scrollbar-color: var(--mat-sys-outline) transparent;
+}
